<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10mdp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.module.OutPutScreen.FindingFalconeSolutionActivity">

    <TextView
        style="@style/textStyleTitle"
        android:text="@string/app_name" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">
      <ImageView
          android:id="@+id/ivQueen"
          style="@style/iconStyleQueenImage" />


      <TextView
          style="@style/textStyleSubTitle"
          android:text="@string/str_success_message" />

      <TextView
          style="@style/textStyleSubTitle"
          android:text="@string/str_planet_found" />

      <TextView
          style="@style/textStyleSubTitle"
          android:text="@string/str_start_again" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnStartAgain"
          style="@style/settingsBottomButton"
          android:text="@string/str_start_again" />
  </LinearLayout>


</LinearLayout>